<resources>
    <string name="app_name">Image Recognition</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter Your Email!</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="login_now">Login Now</string>
    <string name="already_have_an_account">Already have an account!</string>
    <string name="dont_have_an_account">Don\'t have an account!</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">RESET</string>
    <string name="back_to_login">Back to login</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Name</string>
    <string name="aboutTextPart1">Our app utilizes advanced image recognition technology to quickly identify plant diseases, providing instant diagnosis and tailored treatment recommendations.</string>
    <string name="aboutTextPart2">Empower yourself with the knowledge to protect and nurture your plants effectively.</string>
    <string name="back_to_main">Back To Main</string>
    <string name="pathDataForSettingsIcon">M19.14,12.94c0.04,-0.3 0.06,-0.61 0.06,-0.94c0,-0.32 -0.02,-0.64 -0.07,-0.94l2.03,-1.58c0.18,-0.14 0.23,-0.41 0.12,-0.61l-1.92,-3.32c-0.12,-0.22 -0.37,-0.29 -0.59,-0.22l-2.39,0.96c-0.5,-0.38 -1.03,-0.7 -1.62,-0.94L14.4,2.81c-0.04,-0.24 -0.24,-0.41 -0.48,-0.41h-3.84c-0.24,0 -0.43,0.17 -0.47,0.41L9.25,5.35C8.66,5.59 8.12,5.92 7.63,6.29L5.24,5.33c-0.22,-0.08 -0.47,0 -0.59,0.22L2.74,8.87C2.62,9.08 2.66,9.34 2.86,9.48l2.03,1.58C4.84,11.36 4.8,11.69 4.8,12s0.02,0.64 0.07,0.94l-2.03,1.58c-0.18,0.14 -0.23,0.41 -0.12,0.61l1.92,3.32c0.12,0.22 0.37,0.29 0.59,0.22l2.39,-0.96c0.5,0.38 1.03,0.7 1.62,0.94l0.36,2.54c0.05,0.24 0.24,0.41 0.48,0.41h3.84c0.24,0 0.44,-0.17 0.47,-0.41l0.36,-2.54c0.59,-0.24 1.13,-0.56 1.62,-0.94l2.39,0.96c0.22,0.08 0.47,0 0.59,-0.22l1.92,-3.32c0.12,-0.22 0.07,-0.47 -0.12,-0.61L19.14,12.94zM12,15.6c-1.98,0 -3.6,-1.62 -3.6,-3.6s1.62,-3.6 3.6,-3.6s3.6,1.62 3.6,3.6S13.98,15.6 12,15.6z</string>
    <string name="profilePicture">profilePicture</string>
    <string name="change_information">Change Information</string>
    <string name="edit_user_information">Edit User Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="sex">Sex</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_language">Change Language</string>
    <string name="john_doe">John Doe</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="new_york_usa">New York, USA</string>
    <string name="male">Male</string>
    <string name="are_ypu_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="please_choose_a_valid_gender">Please choose a valid gender!</string>
    <string name="eighteen">18</string>
    <string name="cancel">Cancel</string>
    <string name="change_photo">Change Photo</string>
    <string name="choose_an_image">Choose an Image!</string>
    <string name="choose">Choose</string>
    <string name="process">Process</string>
    <string name="imageToProcess">ImageToProcess</string>
    <string name="resault">Resault:</string>

    <string-array name="gender_options">
        <item>Choose</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>