<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/editProfileButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/edit_profile"
        android:textSize="16sp"
        app:cornerRadius="7dp"
        android:textAlignment="viewStart"
        app:iconGravity="end"
        app:iconSize="60dp"
        app:icon="@drawable/ic_edit_foreground"
        app:iconTint="@color/white"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeThemeButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/change_theme"
        android:textSize="16sp"
        app:cornerRadius="7dp"
        android:textAlignment="viewStart"
        app:iconGravity="end"
        app:icon="@drawable/ic_theme_foreground"
        app:iconSize="60dp"
        app:iconTint="@color/white"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeLanguageButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/change_language"
        android:textSize="16sp"
        app:cornerRadius="7dp"
        android:textAlignment="viewStart"
        app:iconGravity="end"
        app:icon="@drawable/ic_language_foreground"
        app:iconSize="60dp"
        app:iconTint="@color/white"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/logout"
        android:textSize="16sp"
        app:cornerRadius="7dp"
        android:textAlignment="viewStart"
        app:iconGravity="end"
        app:icon="@drawable/ic_logout_foreground"
        app:iconSize="60dp"
        app:iconTint="@color/white"/>

</LinearLayout>
