<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/drawerLayout"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/pickImageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/choose_an_image"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pickedImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imageToProcess"
                app:layout_constraintBottom_toTopOf="@+id/resaultText"
                app:layout_constraintEnd_toEndOf="@+id/pickImageText"
                app:layout_constraintStart_toStartOf="@+id/pickImageText"
                app:layout_constraintTop_toBottomOf="@+id/pickImageText"
                tools:srcCompat="@tools:sample/avatars" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChooseImage"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintBottom_toTopOf="@+id/btnProcess"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="10dp"
                android:text="@string/choose"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnProcess"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/process"/>

            <TextView
                android:id="@+id/resaultText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/resault"
                app:layout_constraintBottom_toTopOf="@+id/btnChooseImage"
                app:layout_constraintEnd_toEndOf="@+id/pickedImageView"
                app:layout_constraintStart_toStartOf="@+id/pickedImageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            app:menu="@menu/nav_header_menu"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:fadingEdge="vertical" />


    </androidx.drawerlayout.widget.DrawerLayout>
</layout>